<resources>
    <string name="app_name">Guide</string>
    <string name="main_resa_hotel">Réserver \nun hotel</string>
    <string name="main_resa_resto">Réserver \nun restaurant</string>
    <string name="main_subtitle">Retrouvez les meilleurs hôtels et restaurants</string>
    <string name="main_title">Hôtel resto</string>
    <string name="listing_restaurant_title">Les Restaurants</string>
    <string name="listing_hotel_title">Les Hôtels</string>
    <string name="listing_search">Rechercher un restaurant</string>
    <string name="listing_sort_by_category">Trier par catégorie :</string>
</resources>