<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/listingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:textSize="23sp"
        android:textStyle="bold"
        tools:text="@string/listing_restaurant_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="20dp"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac convallis erat, non faucibus nibh. Fusce a consectetur neque. " />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="20dp"
        android:textStyle="bold"
        android:text="@string/listing_sort_by_category" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dropdown"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:layout_marginStart="20dp"
        android:background="#fcf0d9" />

    <TextView
        android:id="@+id/countResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:textStyle="bold"
        android:textSize="17sp"
        tools:text="1 restaurant trouvé" />


    <ListView
        android:id="@+id/listViewName"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewData"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/listing_search"
        android:inputType="text"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        android:background="#fcf0d9"
        android:maxLines="1"
        android:textSize="16sp"
        android:padding="20dp"
        android:textStyle="bold"/>

</LinearLayout>